# cfp

./: README.md  api.py  etl_database.db  etl_script.py  pyproject.toml  test.py
csv_files/: census.csv
