[tool.poetry]
name = "cfp"
version = "0.1.0"
description = ""
authors = ["Emmanuel Bonsu <emmanuel.bonsu@limejump.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.2"
ruff = "^0.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
